# N-Body-Simulation

./: .gitignore  CMakeLists.txt  README.md
include/: body.h  cpu_computing.h  cuda_computing.cuh  cuda_util.h
include/glew/lib/: glew32.lib  glew32d.lib  libglew32.lib
include/glew/lib/pkgconfig/: glew.pc
src/: body.cpp  cpu_computing.cpp  cuda_computing.cu  main.cpp
